<resources>
    <string name="app_name">Testapp</string>
    <string name="title_hello">Привет Практикум</string>
    <string name="search">Поиск</string>
    <string name="mediateca">Медиатека</string>
    <string name="setings">Настройки</string>
    <string name="playlistMaker">Playlist Maker</string>
    <string name="black_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="rules">Пользовательское соглашение</string>
    <string name="practicumLink">https://practicum.yandex.ru/android-developer/</string>
    <string name="gmail">denistuncbilek92718@gmail.com</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicumOffer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="shareShort">Поделиться</string>
    <string name="image_not_found">Ничего не нашлось</string>
    <string name="not_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="historyTitle">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>