<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSecondary">

    <ImageButton
        android:id="@+id/backToMainFromPlayer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/row"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:tint="?attr/colorOnPrimary"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/backToMainFromPlayer"
        app:layout_constraintBottom_toTopOf="@id/track_title"
        app:layout_constraintDimensionRatio="h,1:1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/track_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintBottom_toTopOf="@id/track_artist"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_text_medium"
        tools:text="Yesterday (Remaster 2009)"/>

    <TextView
        android:id="@+id/track_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_title"
        app:layout_constraintBottom_toTopOf="@id/barrier_top"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ys_text_medium"
        android:textFontWeight="500"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        tools:text="The Beatles"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="play" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="listened_by_the_time" />

    <ImageButton
        android:id="@+id/add_to_playlist"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/button_add_playlist"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_artist"
        android:layout_marginTop="54dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@id/play"
        android:backgroundTint="?attr/colorSecondary" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/play_button"
        app:layout_constraintTop_toBottomOf="@id/track_artist"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/add_to_playlist"
        app:layout_constraintEnd_toStartOf="@id/add_to_favourites"
        android:backgroundTint="?attr/colorSecondary" />

    <ImageButton
        android:id="@+id/add_to_favourites"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/like_button"
        app:layout_constraintTop_toBottomOf="@id/track_artist"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/play"
        android:backgroundTint="?attr/colorSecondary" />

    <TextView
        android:id="@+id/listened_by_the_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/play"
        app:layout_constraintStart_toStartOf="@id/play"
        app:layout_constraintEnd_toEndOf="@id/play"
        android:gravity="center"
        tools:text="0:00"
        android:fontFamily="@font/ys_text_medium"
        android:textSize="14sp"
        android:textFontWeight="500"/>

    <TextView
        android:id="@+id/time"
        android:textColor="@color/white_vector"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/time" />

    <TextView
        android:id="@+id/time_parameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/time"
        android:gravity="end"
        tools:text="5:35"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnPrimary" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/album_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="album,album_parameter" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/year"
        android:text="@string/album"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:textColor="@color/white_vector"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/album_parameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/album"
        app:layout_constraintStart_toEndOf="@id/album"
        tools:text="Yesterday (Remaster 2009)"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:gravity="end"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/genre"
        android:text="@string/year"
        android:layout_marginBottom="16dp"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textColor="@color/white_vector"
        android:textFontWeight="400"/>

    <TextView
        android:id="@+id/year_parameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/year"
        app:layout_constraintStart_toEndOf="@id/year"
        android:gravity="end"
        tools:text="1965"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/country"
        android:text="@string/genre"
        android:layout_marginBottom="16dp"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:textColor="@color/white_vector"/>

    <TextView
        android:id="@+id/genre_parameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/genre"
        android:gravity="end"
        tools:text="Rock"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnPrimary"/>

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/country"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:textColor="@color/white_vector"
        android:layout_marginBottom="28dp"/>

    <TextView
        android:id="@+id/country_parameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/country"
        app:layout_constraintStart_toEndOf="@id/country"
        android:gravity="end"
        tools:text="Великобритания"
        android:textSize="13sp"
        android:fontFamily="@font/ys_text_regular"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>